--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.1.0",
+    "@material-ui/icons": "^3.0.1",
     "animated": "^0.2.2",
     "bad-words": "^1.6.3",
     "classnames": "^2.2.6",
@@ -17,6 +18,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0",
     "react-transition-group": "^2.4.0",
     "request": "^2.88.0",
     "shuffle-array": "^1.0.1",
