--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "profane-words": "^0.2.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-material-ui-form-validator": "^2.0.1",
     "react-router": "^4.3.1",
