--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "uitest": "testcafe chrome  src/tests/*uitest* --app \"npm start\""
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.5.2"
   }
 }
